tests/ui/weird-lifetime.stderr
error: Key type should be a simple table name
 --> $DIR/weird-lifetime.rs:5:29
  |
5 |         surname: Key<Surname<'a>>,
  |                             ^^^^^
